syntax = "proto3";

option go_package = "./pb";

package ticket;

service TicketService {
    rpc PurchaseTicket (TicketRequest) returns (Receipt);
    rpc GetReceipt (User) returns (Receipt);
    rpc GetSeatAllocation (Section) returns (SeatAllocationList);
    rpc RemoveUser (User) returns (RemoveUserResponse);
    rpc ModifySeat (ModifySeatRequest) returns (SeatAllocation);
}

message TicketRequest {
    string from = 1;
    string to = 2;
    User user = 3;
}

message Receipt {
    string from = 1;
    string to = 2;
    User user = 3;
    float price_paid = 4;
}

message User {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

enum SectionTypes {
    Undefinded = 0;
    Class_A = 1;
    Class_B = 2;
}

message Section {
    SectionTypes section = 1;
    int32 seat_number = 2; 
}

message SeatAllocation {
    User user = 1;
    Section section = 2;
}

message SeatAllocationList {
    repeated SeatAllocation allocations = 1;
}

message ModifySeatRequest {
    User user = 1;
    Section section = 2;
}

message RemoveUserResponse{
    string status = 1;
}